[package]
name = "workshop-btc-txn-builder-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base58 = "0.2.0"
secp256k1 = { version = "0.24.0", features = ["rand"] }
sha2 = "0.10"
serde = { version = "1.0.130", features = ["derive"] }
bitcoin_hashes = "0.15.0"
hex = "0.4.3"
bs58 = "0.5.1"
bitcoin = "0.32.4"

[dev-dependencies]
assert_cmd = "2.0"

[lib]
path = "src/lib.rs"
